// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FinalOutputNode > basic > getNodeDisplayFile 1`] = `
"from uuid import UUID

from vellum_ee.workflows.display.editor import NodeDisplayData, NodeDisplayPosition
from vellum_ee.workflows.display.nodes import BaseFinalOutputNodeDisplay
from vellum_ee.workflows.display.nodes.types import NodeOutputDisplay

from ...nodes.final_output_node import FinalOutputNode


class FinalOutputNodeDisplay(BaseFinalOutputNodeDisplay[FinalOutputNode]):
    node_id = UUID("48e0d88b-a544-4a14-b49f-38aca82e0e13")
    target_handle_id = UUID("<target-handle-id>")
    output_name = "final-output"
    node_input_ids_by_name = {
        "node_input": UUID("9bf086d4-feed-47ff-9736-a5a6aa3a11cc")
    }
    output_display = {
        FinalOutputNode.Outputs.value: NodeOutputDisplay(
            id=UUID("<output-id>"), name="value"
        ),
    }
    display_data = NodeDisplayData(
        position=NodeDisplayPosition(x=2075.7067885117494, y=234.65663468515768),
        width=462,
        height=288,
    )
"
`;

exports[`FinalOutputNode > basic > getNodeFile 1`] = `
"from vellum.workflows.nodes.displayable import FinalOutputNode as BaseFinalOutputNode
from vellum.workflows.state import BaseState


class FinalOutputNode(BaseFinalOutputNode[BaseState, str]):
    class Outputs(BaseFinalOutputNode.Outputs):
        value = "<my-output>"
"
`;

exports[`FinalOutputNode > should codegen deduplicated output class > getNodeDisplayFile 1`] = `
"from uuid import UUID

from vellum_ee.workflows.display.editor import NodeDisplayData, NodeDisplayPosition
from vellum_ee.workflows.display.nodes import BaseFinalOutputNodeDisplay
from vellum_ee.workflows.display.nodes.types import NodeOutputDisplay

from ...nodes.final_output_node import FinalOutputNode


class FinalOutputNodeDisplay(BaseFinalOutputNodeDisplay[FinalOutputNode]):
    node_id = UUID("48e0d88b-a544-4a14-b49f-38aca82e0e13")
    target_handle_id = UUID("<target-handle-id>")
    output_name = "final-output"
    node_input_ids_by_name = {
        "node_input": UUID("9bf086d4-feed-47ff-9736-a5a6aa3a11cc")
    }
    output_display = {
        FinalOutputNode.Outputs.value: NodeOutputDisplay(
            id=UUID("<output-id>"), name="value"
        ),
    }
    display_data = NodeDisplayData(
        position=NodeDisplayPosition(x=2075.7067885117494, y=234.65663468515768),
        width=462,
        height=288,
    )
"
`;

exports[`FinalOutputNode > should codegen deduplicated output class > getNodeFile 1`] = `
"from vellum.workflows.nodes.displayable import FinalOutputNode as BaseFinalOutputNode
from vellum.workflows.state import BaseState


class FinalOutputNode(BaseFinalOutputNode[BaseState, str]):
    class Outputs(BaseFinalOutputNode.Outputs):
        value = "<my-output>"
"
`;

exports[`FinalOutputNode > should codegen successfully without node input > getNodeDisplayFile 1`] = `
"from uuid import UUID

from vellum_ee.workflows.display.editor import NodeDisplayData, NodeDisplayPosition
from vellum_ee.workflows.display.nodes import BaseFinalOutputNodeDisplay
from vellum_ee.workflows.display.nodes.types import NodeOutputDisplay

from ...nodes.final_output_node import FinalOutputNode


class FinalOutputNodeDisplay(BaseFinalOutputNodeDisplay[FinalOutputNode]):
    node_id = UUID("48e0d88b-a544-4a14-b49f-38aca82e0e13")
    target_handle_id = UUID("<target-handle-id>")
    output_name = "final-output"
    output_display = {
        FinalOutputNode.Outputs.value: NodeOutputDisplay(
            id=UUID("<output-id>"), name="value"
        ),
    }
    display_data = NodeDisplayData(
        position=NodeDisplayPosition(x=2075.7067885117494, y=234.65663468515768),
        width=462,
        height=288,
    )
"
`;

exports[`FinalOutputNode > should codegen successfully without node input > getNodeFile 1`] = `
"from vellum.workflows.nodes.displayable import FinalOutputNode as BaseFinalOutputNode
from vellum.workflows.state import BaseState


class FinalOutputNode(BaseFinalOutputNode[BaseState, str]):
    class Outputs(BaseFinalOutputNode.Outputs):
        pass
"
`;

exports[`FinalOutputNode > should generate unique class names when mixing defined and undefined class names > getNodeDisplayFile 1`] = `
"from uuid import UUID

from vellum_ee.workflows.display.editor import NodeDisplayData, NodeDisplayPosition
from vellum_ee.workflows.display.nodes import BaseFinalOutputNodeDisplay
from vellum_ee.workflows.display.nodes.types import NodeOutputDisplay

from ...nodes.final_output import FinalOutput


class FinalOutputDisplay(BaseFinalOutputNodeDisplay[FinalOutput]):
    node_id = UUID("node-with-definition")
    target_handle_id = UUID("<target-handle-id>")
    output_name = "final_output"
    node_input_ids_by_name = {
        "node_input": UUID("9bf086d4-feed-47ff-9736-a5a6aa3a11cc")
    }
    output_display = {
        FinalOutput.Outputs.value: NodeOutputDisplay(
            id=UUID("<output-id>"), name="value"
        ),
    }
    display_data = NodeDisplayData(
        position=NodeDisplayPosition(x=2075.7067885117494, y=234.65663468515768),
        width=462,
        height=288,
    )


from uuid import UUID

from vellum_ee.workflows.display.editor import NodeDisplayData, NodeDisplayPosition
from vellum_ee.workflows.display.nodes import BaseFinalOutputNodeDisplay
from vellum_ee.workflows.display.nodes.types import NodeOutputDisplay

from ...nodes.final_output_1 import FinalOutput1


class FinalOutput1Display(BaseFinalOutputNodeDisplay[FinalOutput1]):
    label = "Final Output"
    node_id = UUID("node-without-definition-1")
    target_handle_id = UUID("<target-handle-id>")
    output_name = "text"
    node_input_ids_by_name = {
        "node_input": UUID("9bf086d4-feed-47ff-9736-a5a6aa3a11cc")
    }
    output_display = {
        FinalOutput1.Outputs.value: NodeOutputDisplay(
            id=UUID("<output-id>"), name="value"
        ),
    }
    display_data = NodeDisplayData(
        position=NodeDisplayPosition(x=2075.7067885117494, y=234.65663468515768),
        width=462,
        height=288,
    )


from uuid import UUID

from vellum_ee.workflows.display.editor import NodeDisplayData, NodeDisplayPosition
from vellum_ee.workflows.display.nodes import BaseFinalOutputNodeDisplay
from vellum_ee.workflows.display.nodes.types import NodeOutputDisplay

from ...nodes.final_output_2 import FinalOutput2


class FinalOutput2Display(BaseFinalOutputNodeDisplay[FinalOutput2]):
    label = "Final Output"
    node_id = UUID("node-without-definition-2")
    target_handle_id = UUID("<target-handle-id>")
    output_name = "chat_history"
    node_input_ids_by_name = {
        "node_input": UUID("9bf086d4-feed-47ff-9736-a5a6aa3a11cc")
    }
    output_display = {
        FinalOutput2.Outputs.value: NodeOutputDisplay(
            id=UUID("<output-id>"), name="value"
        ),
    }
    display_data = NodeDisplayData(
        position=NodeDisplayPosition(x=2075.7067885117494, y=234.65663468515768),
        width=462,
        height=288,
    )
"
`;

exports[`FinalOutputNode > should generate unique class names when mixing defined and undefined class names > getNodeFile 1`] = `
"from vellum.workflows.nodes.displayable import FinalOutputNode
from vellum.workflows.state import BaseState


class FinalOutput(FinalOutputNode[BaseState, str]):
    class Outputs(FinalOutputNode.Outputs):
        value = "<my-output>"


from vellum.workflows.nodes.displayable import FinalOutputNode
from vellum.workflows.state import BaseState


class FinalOutput1(FinalOutputNode[BaseState, str]):
    class Outputs(FinalOutputNode.Outputs):
        value = "<my-output>"


from vellum.workflows.nodes.displayable import FinalOutputNode
from vellum.workflows.state import BaseState


class FinalOutput2(FinalOutputNode[BaseState, str]):
    class Outputs(FinalOutputNode.Outputs):
        value = "<my-output>"
"
`;

exports[`FinalOutputNode > should use schema field for type annotation when available > getNodeFile 1`] = `
"from vellum.workflows.nodes.displayable import FinalOutputNode as BaseFinalOutputNode
from vellum.workflows.state import BaseState


class FinalOutputNode(BaseFinalOutputNode[BaseState, list[str]]):
    class Outputs(BaseFinalOutputNode.Outputs):
        pass
"
`;
